Update inventory paths
- Create inventories for development/staging/production
- Move all version vars to os_vars
- Generate a log for pkgs installed
-Improve nginx, uwsgi, and redis by anchoring versions
- Move ansible user /pwd to host config

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-#Keep the same values in the .env file and the .env.example file /ckan-ansibles/host_vars/.
+#Keep the same values in the .env file and the .env.example file /ckan-ansibles/inventories/*/host_vars/.
 
 # CKAN
 CKAN_USER=ckan
