--- a/playbook/ansible.cfg
+++ b/playbook/ansible.cfg
@@ -4,8 +4,8 @@
 # Common destinations
 ########################################
 
-inventory = ./inventory/host.ini
-hostfile = ./inventory/host.ini
+inventory = ./inventories/staging/hosts.ini
+hostfile = ./inventories/staging/hosts.ini
 roles_path = ./roles/common:./roles/ckan:./roles/database:./roles/webserver:./roles/solr:./roles/redis:./roles/supervisor
 retry_files_save_path = ./config/tmp/retry/
 log_path = ./config/ansible.log
