--- a/playbook/inventories/os_vars/archlinux.yml
+++ b/playbook/inventories/os_vars/archlinux.yml
@@ -1,29 +1,23 @@
-### Packages: https://rhel.pkgs.org/8
-### Common packages
+### Packages: https://archlinux.pkgs.org/rolling
 common_pkgs: 
-  - "git-core"
-  - "chkconfig"
-  - "policycoreutils-python-utils"
-  - "libxml2-devel"
-  - "libxslt-devel"
-  - "libpq-devel"
-  - "pcre"
-  - "pcre-devel"
   - "git"
+  - "inetutils"  # provides the 'hostname' command, equivalent to chkconfig
+  - "libxml2"
+  - "libxslt"
+  - "postgresql-libs"  # equivalent to libpq-devel
+  - "pcre"
   - "gcc"
-  - "gcc-c++"
   - "wget"
   - "curl"
   - "patch"
-  - "file-libs"
+  - "file"
   - "make"
   - "cmake"
   - "automake"
-  - "gmp-devel"
+  - "gmp"
   - "systemd"
-  - "epel-release"
-  - "openssl-devel"
-  - "libffi-devel"
+  - "openssl"
+  - "libffi"
   - "libtool"
   - "sudo"
   - "gzip"
@@ -42,10 +36,7 @@ supervisor_pkg: supervisor
 __redis_package: redis
 redis_daemon: redis
 redis_conf_path: /etc/redis.conf
-redis_conf_mode: 0644
-
-### PostgreSQL
-postgres_version: 15
+redis_version: 6.2.7
 
 ### Python
 python_pkg: python39
@@ -53,25 +44,25 @@ python_bin_path: /usr/bin/python3.9
 
 ### Python packages
 python_deps_pkgs:
-  - "{{ python_pkg }}-devel"
+  - "{{ python_pkg }}"
   - "{{ python_pkg }}-pip"
 
 ### Proj
-proj_gtest_pkg: gcc-c++
+proj_gtest_pkg: gtest-dev
+proj_version: proj-9.1.1
 
 ### Spatial packages
 spatial_deps_pkgs:
-  - "geos-devel"
-  - "libcurl-devel"
-  - "libgeotiff-devel"
-  - "libtiff-devel"
+  - "geos"
+  - "curl"
+  - "libgeotiff"
+  - "libtiff"
   - "sqlite"
-  - "sqlite-devel"
   - "{{ proj_gtest_pkg }}"
   - "unzip"
 
 ### Java
-openjdk_pkg: java-11-openjdk
+openjdk_pkg: java-1.8.0-openjdk
 java_bin_path: /usr/lib/jvm
 
 ### Solr packages
@@ -80,20 +71,23 @@ solr_deps_pkgs:
   - "maven"
   - "lsof"
   - "acl"
+solr_version: 9.5.0
+jts_version: 1.19.0
 
-### Postgresql packages
+### PostgreSQL
+postgres_version: 15
 postgresql_deps_pkgs:
-  - "@postgresql:{{ postgres_version }}/server"
-  - "postgresql-contrib"
-  - postgresql-devel
-  - "{{ python_pkg }}-psycopg2"
+  - "postgresql"
+  - "postgresql-libs"
+  - "python-psycopg2"
 postgresqL_python3_psycopg2: python3-psycopg2
 
 ### NGINX packages
 nginx_pkg: nginx
+nginx_version: 1.20.1
 
 ### systemd
-systemd_dir: /lib/systemd/system
+systemd_dir: /usr/lib/systemd
 
 ### service
 init_dir: /etc/init.d
@@ -102,3 +96,6 @@ init_dir: /etc/init.d
 ansible_collections:
   - community.general
   - community.postgresql
+
+## uWSGI
+uwsgi_version: "2.0.25.1"
