--- a/playbook/roles/redis/tasks/redis_install_archlinux.yml
+++ b/playbook/roles/redis/tasks/redis_install_archlinux.yml
@@ -1,4 +1,4 @@
-- name: Ensure Redis is installed.
+- name: "Ensure Redis {{ redis_version}} is installed."
   pacman:
-    name: "{{ redis_package }}"
+    name: "{{ redis_package }}-{{ redis_version }}"
     state: present
