--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ playbook/roles/common/tasks/files/keys
 .vscode
 .vagrant
 doc/deployments/*
-playbook/host_vars/test*.yml
+playbook/inventories/*/host_vars/test*.yml
