--- a/playbook/roles/common/tasks/main.yml
+++ b/playbook/roles/common/tasks/main.yml
@@ -1,9 +1,9 @@
-- name: "Include OS-specific variables for OS: {{ ansible_os_family }}-{{ ansible_distribution_major_version }}.{{ ansible_distribution_minor_version }}"
+- name: "Include OS-specific variables (os_vars) for OS: {{ ansible_os_family }}-{{ ansible_distribution_major_version }}.{{ ansible_distribution_minor_version }}"
   include_vars: "{{ item }}"
   with_first_found:
-    - "os_vars/{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version }}.{{ ansible_distribution_minor_version }}.yml"
-    - "os_vars/{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version }}.yml"
-    - "os_vars/{{ ansible_os_family | lower }}.yml"
+    - "inventories/os_vars/{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version }}.{{ ansible_distribution_minor_version }}.yml"
+    - "inventories/os_vars/{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version }}.yml"
+    - "inventories/os_vars/{{ ansible_os_family | lower }}.yml"
 
 - name: Install basic dependencies
   include_role:
