--- a/playbook/inventories/os_vars/debian-12.yml
+++ b/playbook/inventories/os_vars/debian-12.yml
@@ -87,6 +87,7 @@ postgresql_deps_pkgs:
   - "postgresql-contrib"
   - "libpq-dev"
   - "python3-psycopg2"
+postgresql_client_pkg: postgresql
 postgresqL_python3_psycopg2: python3-psycopg2
 
 ### NGINX packages
