--- a/playbook/roles/database/tasks/database_config_psql_client.yml
+++ b/playbook/roles/database/tasks/database_config_psql_client.yml
@@ -20,13 +20,13 @@
   when: ansible_os_family == "Archlinux"
 
 - name: "Check if database {{ ckan_database.ckan_db }} exists"
-  shell: PGPASSWORD={{ ckan_database.ckan_db_password }} psql -h {{ ckan_database.postgres_host }} -U {{ ckan_database.ckan_db_user }} -lqt | cut -d \| -f 1 | grep -qw {{ ckan_database.ckan_db }}
+  shell: PGPASSWORD={{ ckan_database.ckan_db_password }} psql -h {{ ckan_database.postgres_host }} -p {{ ckan_database.postgres_port }} -U {{ ckan_database.ckan_db_user }} -lqt | cut -d \| -f 1 | grep -qw {{ ckan_database.ckan_db }}
   register: database_exists
   failed_when: false
   changed_when: false
 
 - name: "Check if database {{ ckan_datastore.datastore_db }} exists"
-  shell: PGPASSWORD={{ ckan_database.ckan_db_password }} psql -h {{ ckan_database.postgres_host }} -U {{ ckan_database.ckan_db_user }} -lqt | cut -d \| -f 1 | grep -qw {{ ckan_datastore.datastore_db }}
+  shell: PGPASSWORD={{ ckan_database.ckan_db_password }} psql -h {{ ckan_datastore.datastore_host }} -p {{ ckan_datastore.datastore_port }} -U {{ ckan_database.ckan_db_user }} -lqt | cut -d \| -f 1 | grep -qw {{ ckan_datastore.datastore_db }}
   register: database_exists
   failed_when: false
   changed_when: false
