--- a/playbook/inventories/staging/host_vars/staging_01.yml
+++ b/playbook/inventories/staging/host_vars/staging_01.yml
@@ -95,6 +95,7 @@ ckan_database: {
   ckan_db_password: "ckandbpassword",
   ckan_db: "ckan_db",
   postgres_host: "localhost",
+  postgres_port: "5432"
 }
 
 ckan_datastore: {
@@ -102,6 +103,7 @@ ckan_datastore: {
   datastore_readonly_password: "datastoredbpassword",
   datastore_db: "ckan_datastore",
   datastore_host: "localhost",
+  datastore_port: "5432"
 }
 
 ### CKAN configuration variables #########################################
@@ -180,7 +182,7 @@ ckanext__spatial__common_map__attribution: "Map tiles by <a href=\"http://openst
 
 #### ckanext-xloader
 ckanext__xloader__api_token: api_token
-ckanext__xloader__jobs_db__uri: "postgresql://{{ ckan_database.ckan_db_user }}:{{ ckan_database.ckan_db_password }}@{{ ckan_database.postgres_host }}/{{ ckan_database.ckan_db }}"
+ckanext__xloader__jobs_db__uri: "postgresql://{{ ckan_database.ckan_db_user }}:{{ ckan_database.ckan_db_password }}@{{ ckan_database.postgres_host }}:{{ ckan_database.postgres_port }}/{{ ckan_database.ckan_db }}"
 
 #### ckanext-pages
 ckanext__pages__organization: True
@@ -315,6 +317,6 @@ pycsw_inspire_temp_extent: 2023-12-31/2030-12-31
 ### Test URLs
 test_solr_ckan_url: "http://{{ solr_host }}:{{ solr_port }}/solr/{{ solr_ckan_core_name }}"
 test_redis_ckan_url: "redis://{{ redis_bind_interface }}:{{ redis_port }}/1"
-test_ckan_sqlalchemy_url: "postgresql://{{ ckan_database.ckan_db_user }}:{{ ckan_database.ckan_db_password }}@{{ ckan_database.postgres_host }}/{{ ckan_database.ckan_db }}"
-test_ckan_datastore_ro_url: "postgresql://{{ ckan_database.datastore_readonly_user }}:{{ ckan_database.datastore_readonly_password }}@{{ ckan_database.datastore_host }}/{{ ckan_database.ckan_datastore_db }}"
-test_ckan_datastore_url: "postgresql://{{ ckan_database.ckan_db_user }}:{{ ckan_database.ckan_db_password }}@{{ ckan_database.datastore_host }}/{{ ckan_database.ckan_datastore_db }}"
+test_ckan_sqlalchemy_url: "postgresql://{{ ckan_database.ckan_db_user }}:{{ ckan_database.ckan_db_password }}@{{ ckan_database.postgres_host }}:{{ ckan_database.postgres_port }}/{{ ckan_database.ckan_db }}"
+test_ckan_datastore_ro_url: "postgresql://{{ ckan_database.datastore_readonly_user }}:{{ ckan_database.datastore_readonly_password }}@{{ ckan_database.datastore_host }}:{{ ckan_database.datastore_port }}/{{ ckan_database.ckan_datastore_db }}"
+test_ckan_datastore_url: "postgresql://{{ ckan_database.ckan_db_user }}:{{ ckan_database.ckan_db_password }}@{{ ckan_database.datastore_host }}:{{ ckan_database.datastore_port }}/{{ ckan_database.ckan_datastore_db }}"
