--- a/playbook/roles/ckan/tasks/ckan_test_conns.yml
+++ b/playbook/roles/ckan/tasks/ckan_test_conns.yml
@@ -19,17 +19,19 @@
     login_host: "{{ ckan_database.postgres_host }}"
     login_user: "{{ ckan_database.ckan_db_user }}"
     login_password: "{{ ckan_database.ckan_db_password }}"
+    login_port: "{{ ckan_database.postgres_port }}"
   register: db_conn
   until: db_conn.is_available
   retries: 5
   delay: 10
 
-- name: "Check datastore DB ({{ ckan_database.ckan_db }}) connection"
+- name: "Check datastore DB ({{ ckan_datastore.datastore_db }}) connection"
   postgresql_ping:
     db: "{{ ckan_datastore.datastore_db }}"
     login_host: "{{ ckan_datastore.datastore_host }}"
     login_user: "{{ ckan_database.ckan_db_user }}"
     login_password: "{{ ckan_database.ckan_db_password }}"
+    login_port: "{{ ckan_datastore.datastore_port }}"
   register: db_conn
   until: db_conn.is_available
   retries: 5
