--- a/playbook/roles/ckan/tasks/ckan_config_ckan.yml
+++ b/playbook/roles/ckan/tasks/ckan_config_ckan.yml
@@ -35,12 +35,15 @@
   command: "{{ ckan_virtualenv }}/bin/ckan --config={{ ckan_config_dir}}/ckan.ini db init"
 
 - name: Initializing datastore database
-  become: true
-  become_user: postgres
   shell: |
-    {{ ckan_virtualenv }}/bin/ckan --config={{ ckan_config_dir}}/ckan.ini datastore set-permissions | psql --set ON_ERROR_STOP=1
+    export PGPASSWORD="{{ ckan_database.ckan_db_password }}"
+    {{ ckan_virtualenv }}/bin/ckan --config={{ ckan_config_dir }}/ckan.ini datastore set-permissions | \
+    psql --host={{ ckan_datastore.datastore_host }} --port={{ ckan_datastore.datastore_port }} --username={{ ckan_database.ckan_db_user }} --dbname={{ ckan_datastore.datastore_db }} --set ON_ERROR_STOP=1
+  register: result
+  failed_when: result.rc != 0
+  changed_when: false
   environment:
-    PGPASSWORD: "{{ ckan_database.postgres_password }}"
+    PGPASSWORD: "{{ ckan_database.ckan_db_password }}"
 
 - name: Create webassets storage folder
   file:
